--- a/newStack/public/css/signupstyle.css
+++ b/newStack/public/css/signupstyle.css
@@ -116,6 +116,5 @@ input[type=password]:hover {
 .alert{
     text-align: center;
     color:red;
-    font-size: 2em;
-}
+    font-size: 1.7em;}
 
